--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-reqwest = { version = "0.10", features = ["blocking"] }
+#serde = { version = "1.0", features = ["derive"] }
+##serde_json = "1.0"
+#serde_derive = "1.0"
+#hyper = "0.12.35"
+#tokio-core = "0.1.17"
+#futures = "0.1.29"
+#reqwest = { version = "0.10", features = ["blocking","json"] }
+reqwest = { version = "0.10", features = ["blocking", "json"] }
