--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2018"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
-##serde_json = "1.0"
-#serde_derive = "1.0"
+serde_json = "1.0"
+serde_derive = "1.0"
 #hyper = "0.12.35"
 #tokio-core = "0.1.17"
 #futures = "0.1.29"
