--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,5 @@ serde_derive = "1.0"
 #tokio-core = "0.1.17"
 #futures = "0.1.29"
 #reqwest = { version = "0.10", features = ["blocking","json"] }
-reqwest = { version = "0.10", features = ["blocking", "json"] }
+reqwest = { version = "0.10", features = ["blocking", "json", "gzip"] }
 fs = "0.0.5"
